--- a/app/views/administrative_mailer/summary_report.text.erb
+++ b/app/views/administrative_mailer/summary_report.text.erb
@@ -2,7 +2,7 @@ Hello, <%= @user.first_name %>.
 
 Below is your students' completion report from the task 
 '<%= @name %>' in the course '<%= @course_name %>' which 
-recently completed at <%= root_url %>. There are <%= @completion_report.keys.count %>
+recently completed at <%= root_url %>. There are <%= @completion_report.keys.size %>
 students enrolled in the course.
 
 Student | Completed at:
