--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -3,8 +3,8 @@
    anonymize = get_anonymous %>
 <p><%= t 'home.greeting', name: @current_user.nil? ? "John" : @current_user.first_name %>,
   <%= t 'home.course_confirm', 
-          course_list_text: t( 'home.courses', count: @waiting_rosters.count),
-          proper_course_list: t( 'home.courses_proper', count: @waiting_rosters.count ) %>:
+          course_list_text: t( 'home.courses', count: @waiting_rosters.size),
+          proper_course_list: t( 'home.courses_proper', count: @waiting_rosters.size ) %>:
 </p>
 <table data-role="table"
           id="basicTable"
