--- a/app/views/installments/slider_basic.html.erb
+++ b/app/views/installments/slider_basic.html.erb
@@ -11,8 +11,8 @@
   <p><%= raw t 'installments.instructions', 
           group_name: @group.get_name( false ),
           project_name: @group.project.get_name( false ),
-          member_count: @members.count,
-          factor_count: @factors.count %></p>
+          member_count: @members.size,
+          factor_count: @factors.size %></p>
   <p><%= t raw 'installments.slider.instructions' %></p>
 </div>
 <% 
