--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -52,7 +52,7 @@
 <div id="groups" class="ui-body-<%= theme_code %> ui-content">
   <h2><%= t :groups %></h2>
   <p>
-    <%= t 'projects.groups_intro', group_count: @project.groups.count %><br>
+    <%= t 'projects.groups_intro', group_count: @project.groups.size %><br>
     <br>
     <%= link_to t('projects.recalculate_diversities'),
         rescore_groups_path( id: @project.id ) %>
