--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -27,7 +27,7 @@
   <div id="courses" class="ui-body-<%= theme_code %> ui-content">
     <p>
       <h3><%= t 'courses.courses' %></h3>
-      <% if @school.bingo_games.count < 1 %>
+      <% if @school.bingo_games.size < 1 %>
         <%= t 'schools.no_courses' %></br>
     <% else %>
       <table data-role="table"
@@ -55,11 +55,11 @@
             <tr>
               <td><%= link_to course.get_name( anonymize ), course %></td>
               <td><%= course.get_number( anonymize ) %></td>
-              <td><%= course.instructors.count %></td>
-              <td><%= course.enrolled_students.count %></td>
-              <td><%= course.projects.count %></td>
-              <td><%= course.experiences.count %></td>
-              <td><%= course.bingo_games.count %></td>
+              <td><%= course.instructors.size %></td>
+              <td><%= course.enrolled_students.size %></td>
+              <td><%= course.projects.size %></td>
+              <td><%= course.experiences.size %></td>
+              <td><%= course.bingo_games.size %></td>
               <td>
                 <div hidden>
                   <%= l in_tz( date: course.start_date ), format: :datestamp %>
