--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,7 +43,7 @@
             <%= f.association :gender %>
             <%= f.input :date_of_birth, as: :date, html5: true %>
             <%= f.input :started_school, as: :date, html5: true %>
-            <%= f.input :cip_code %>
+            <%= f.association :cip_code %>
             <table width='100%'>
               <tr colspan='2'>
                 <td><%= label_tag :country, t( 'devise.registrations.hometown' ) %>
@@ -67,6 +67,18 @@
                   </tr>
                 </table>
                 <%= f.association :primary_language %>
+                <legend>
+                  <%= t( 'devise.registrations.impairments' ) %>
+                </legend>
+                <center>
+                  <fieldset data-role='controlgroup' data-type='horizontal'>
+                    <%= f.input_field :impairment_visual, as: :boolean, inline_label: t('devise.registrations.impairment_visual')%>
+                    <%= f.input_field :impairment_auditory, as: :boolean, inline_label: t('devise.registrations.impairment_auditory')%>
+                    <%= f.input_field :impairment_motor, as: :boolean, inline_label: t('devise.registrations.impairment_motor')%>
+                    <%= f.input_field :impairment_cognitive, as: :boolean, inline_label: t('devise.registrations.impairment_cognitive')%>
+                    <%= f.input_field :impairment_other, as: :boolean, inline_label: t('devise.registrations.impairment_other')%>
+                  </fieldset>
+                </center>
               </div>
             </div>
           </div>
