added results and scoring to bingo worksheets

--- a/app/views/bingo_boards/worksheet_results.html.erb
+++ b/app/views/bingo_boards/worksheet_results.html.erb
@@ -11,4 +11,14 @@
     <% end %>
   </tbody>
 </table>
+<% if @bingo_board.result_img.attached? %>
+  <%= image_tag @bingo_board.result_img %>
+<% else %>
+  No image attached.<br/>
+<% end %>
+<%= form_with model: @bingo_board, url: ws_score_path( @bingo_board ) do |f| %>
+  <%= f.number_field :performance %>
+  <%= f.file_field :result_img, accept: 'image/*'  %>
+  <%= f.submit %>
+<% end %>
 
