--- a/app/assets/stylesheets/graphing.css.scss
+++ b/app/assets/stylesheets/graphing.css.scss
@@ -3,5 +3,5 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /*
  *= require jquery.mobile
- *= require colab-theme
+ *= require colab
  */
